--- a/projects/games/index.html
+++ b/projects/games/index.html
@@ -90,14 +90,27 @@
 
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="../2021/zelda/cover.png" class="image fit thumb">
-									<img src="../2021/zelda/cover.png" alt="" />
+									<img src="./2021/zelda/cover.png" alt="" />
 								</a>
-								<h3>The Legend of Zelda Unity remaster <i>(Course)</i></h3>
+								<h3>The Legend of Zelda Unity Remaster</h3>
 								<p>
-									[<a href="http://www-personal.umich.edu/~marstin/zelda/">play</a>]
+									[<a href="http://www-personal.umich.edu/~marstin/zelda/#three">play</a>][<a href="http://www-personal.umich.edu/~marstin/zelda/#four">download</a>]
 								</p>
 								<ul>
 									<li>Project 1 of <a href="https://www.eecs494.com/">EECS 494: Video Game Development</a>.</li>
+								</ul>
+							</article>
+						
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="../2021/flappy-bird/cover.png" class="image fit thumb">
+									<img src="./2021/zelda/cover.png" alt="" />
+								</a>
+								<h3>Flappy Bird Unity Remaster</h3>
+								<p>
+									[<a href="http://www-personal.umich.edu/~marstin/flappy-bird/#three">play</a>][<a href="http://www-personal.umich.edu/~marstin/flappy-bird/#four">download</a>]
+								</p>
+								<ul>
+									<li>Tutorial 2 of <a href="https://www.eecs494.com/">EECS 494: Video Game Development</a>.</li>
 								</ul>
 							</article>
 
