--- a/projects/index.html
+++ b/projects/index.html
@@ -97,7 +97,7 @@
 								<a href="./2021/zelda/cover.png" class="image fit thumb">
 									<img src="./2021/zelda/cover.png" alt="" />
 								</a>
-								<h3>The Legend of Zelda Unity remaster <i>(Course)</i></h3>
+								<h3>The Legend of Zelda Unity Remaster <i>(Course)</i></h3>
 								<p>
 									[<a href="http://www-personal.umich.edu/~marstin/zelda/#three">play</a>][<a href="http://www-personal.umich.edu/~marstin/zelda/#four">download</a>]
 								</p>
@@ -110,7 +110,7 @@
 								<a href="./2021/flappy-bird/cover.png" class="image fit thumb">
 									<img src="./2021/zelda/cover.png" alt="" />
 								</a>
-								<h3>Flappy Bird Unity remaster <i>(Course)</i></h3>
+								<h3>Flappy Bird Unity Remaster <i>(Course)</i></h3>
 								<p>
 									[<a href="http://www-personal.umich.edu/~marstin/flappy-bird/#three">play</a>][<a href="http://www-personal.umich.edu/~marstin/flappy-bird/#four">download</a>]
 								</p>
