--- a/projects/index.html
+++ b/projects/index.html
@@ -108,7 +108,7 @@
 						
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="./2021/flappy-bird/cover.png" class="image fit thumb">
-									<img src="./2021/zelda/cover.png" alt="" />
+									<img src="./2021/flappy-bird/cover.png" alt="" />
 								</a>
 								<h3>Flappy Bird Unity Remaster <i>(Course)</i></h3>
 								<p>
