--- a/projects/games/index.html
+++ b/projects/games/index.html
@@ -90,7 +90,7 @@
 
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="../2021/zelda/cover.png" class="image fit thumb">
-									<img src="./2021/zelda/cover.png" alt="" />
+									<img src="../2021/zelda/cover.png" alt="" />
 								</a>
 								<h3>The Legend of Zelda Unity Remaster</h3>
 								<p>
@@ -103,7 +103,7 @@
 						
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="../2021/flappy-bird/cover.png" class="image fit thumb">
-									<img src="./2021/zelda/cover.png" alt="" />
+									<img src="../2021/flappy-bird/cover.png" alt="" />
 								</a>
 								<h3>Flappy Bird Unity Remaster</h3>
 								<p>
