--- a/projects/games/index.html
+++ b/projects/games/index.html
@@ -102,8 +102,8 @@
 							</article>
 						
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="../2021/flappy-bird/cover.png" class="image fit thumb">
-									<img src="../2021/flappy-bird/cover.png" alt="" />
+								<a href="../2021/flappy-bird/cover.jpg" class="image fit thumb">
+									<img src="../2021/flappy-bird/cover.jpg" alt="" />
 								</a>
 								<h3>Flappy Bird Unity Remaster</h3>
 								<p>
