--- a/index.html
+++ b/index.html
@@ -530,16 +530,17 @@
 							</article>
 							
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="projects/2020/insta_mini/cover.png" class="image fit thumb">
-									<img src="projects/2020/insta_mini/cover.png" alt="" />
+								<a href="projects/2021/zelda/cover.png" class="image fit thumb">
+									<img src="projects/2021/zelda/cover.png" alt="" />
 								</a>
-								<h3>Instagram MINI</h3>
+								<h3>The Legend of Zelda Unity Remaster</h3>
 								<p>
-									[<a href="https://eecs485staff.github.io/p3-insta485-clientside/">description</a>][code: upon request]
+									[<a href="http://www-personal.umich.edu/~marstin/zelda/#three">play online</a>][<a href="http://www-personal.umich.edu/~marstin/zelda/#four">download</a>]
 								</p>
 								<ul>
-									<li>Project of EECS485: Web Systems. Instructed by Professor Andrew DeOrio</li>
-									<li>A cloned client-side dynamic Instagram.</li>
+									<li>Project 1 of <a href="https://www.eecs494.com/">EECS 494: Video Game Development</a>.</li>
+									<li>A Unity remaster of the first dungeon (the Eagle) from The Legend of Zelda.</li>
+									<li>Custom levels follow the room after defeating Aquamentus, with new mechanics: laser beam and fire blocks.</li>
 								</ul>
 							</article>
 							
