--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 					<p>
 						Here is a virtual but warm greeting from Ziqiao, as you just came across his page!
-						Well, many of my non-Chinese friends found it hard to pronounce my Chinese name,
+						Well, many of my non-Chinese friends found it hard to pronounce my Chinese name (Tsz-Kiu),
 						so...it's absolutely fine to just call me <i>Martin</i> alternatively.
 					</p>
 
