--- a/projects/games/index.html
+++ b/projects/games/index.html
@@ -89,6 +89,19 @@
 					<div class="row">
 
 							<article class="col-6 col-12-xsmall work-item">
+								<a href="../2021/floating/cover.png" class="image fit thumb">
+									<img src="../2021/floating/cover.png" alt="" />
+								</a>
+								<h3>Floating</h3>
+								<p>
+									[<a href="http://www-personal.umich.edu/~marstin/floating/#three">play</a>][<a href="http://www-personal.umich.edu/~marstin/floating/#four">download</a>]
+								</p>
+								<ul>
+									<li>Original Game. Project 2 of <a href="https://www.eecs494.com/">EECS 494: Video Game Development</a>.</li>
+								</ul>
+							</article>
+						
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="../2021/zelda/cover.png" class="image fit thumb">
 									<img src="../2021/zelda/cover.png" alt="" />
 								</a>
