--- a/projects/games/index.html
+++ b/projects/games/index.html
@@ -97,7 +97,7 @@
 									[<a href="http://www-personal.umich.edu/~marstin/floating/#three">play</a>][<a href="http://www-personal.umich.edu/~marstin/floating/#four">download</a>]
 								</p>
 								<ul>
-									<li>Original Game. Project 2 of <a href="https://www.eecs494.com/">EECS 494: Video Game Development</a>.</li>
+									<li>Project 2 of <a href="https://www.eecs494.com/">EECS 494: Video Game Development</a>.</li>
 								</ul>
 							</article>
 						
