--- a/projects/index.html
+++ b/projects/index.html
@@ -80,7 +80,7 @@
 						<h2>Full Portfolio</h2>
 					</header>
 					<p>
-						Here is my full portfolio.
+						Here is a full list of my past/on-going projects.
 					</p>
 					<ul class="actions">
 						<li><a href="/projects/games" target="_self" class="button">Game Design</a></li>
@@ -92,7 +92,20 @@
 					<h2>2021</h2>
 
 					<div class="row">
-
+						
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="./2021/floating/cover.png" class="image fit thumb">
+									<img src="./2021/floating/cover.png" alt="" />
+								</a>
+								<h3>Floating <i>(Course)</i></h3>
+								<p>
+									[<a href="http://www-personal.umich.edu/~marstin/floating/#three">play</a>][<a href="http://www-personal.umich.edu/~marstin/floating/#four">download</a>]
+								</p>
+								<ul>
+									<li>Project 2 of <a href="https://www.eecs494.com/">EECS 494: Video Game Development</a>.</li>
+								</ul>
+							</article>
+						
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="./2021/zelda/cover.png" class="image fit thumb">
 									<img src="./2021/zelda/cover.png" alt="" />
@@ -352,7 +365,7 @@
 								<a href="./2018/bridge_crane/cover.jpg" class="image fit thumb">
 									<img src="./2018/bridge_crane/cover.jpg" alt="" />
 								</a>
-								<h3>Glove Band <i>(Course)</i></h3>
+								<h3>Paper Bridge Crane System <i>(Course)</i></h3>
 								<p>
 									[<a href="https://drive.google.com/file/d/1lZpN5f3_qHV2oVW9vlGoFpzl6Da3qTPn/view?usp=sharing">report</a>]
 								</p>
@@ -374,7 +387,7 @@
 								</p>
 								<ul>
 									<li>Instructed by Professor <a href="http://umji.sjtu.edu.cn/~horst/">Horst Hohberger</a>.</li>
-									<li>Project of VV285, Honors Mathematics. Rank #1.</li>
+									<li>Project of VV285, Honors Mathematics.</li>
 									<li>Model the optical phenomenon of caustic in the coffee cup and perform simulations.</li>
 								</ul>
 							</article>
