--- a/index.html
+++ b/index.html
@@ -82,25 +82,26 @@
 
 					<p>
 						Here is a virtual but warm greeting from Ziqiao, as you just came across his page!
-						Well, many of my non-Chinese friends found it hard to pronounce my Chinese name (Tsz-Kiu),
+						Well, many of my non-Chinese friends found it hard to pronounce my Chinese name (pronounced as Tsz-Kiu),
 						so...it's absolutely fine to just call me <i>Martin</i> alternatively.
 					</p>
 
 					<p>
-						I am a Senior student at the University of Michigan in
+						I am an incoming Ph.D. student working with <a href="https://web.eecs.umich.edu/~chaijy/">Joyce Chai</a>
+						in the <a href="https://sled-group.eecs.umich.edu/">Situated Language and Embodied Dialogue (SLED)</a> Group. <br>
+						I will obtain my Dual Bachelor's Degree at the University of Michigan in
 						<a href="https://cse.engin.umich.edu/academics/undergraduate/computer-science-eng/">
 							Computer Science
 						</a>,
-						with a dual degree in
+						and
 						<a href="http://umji.sjtu.edu.cn/academics/undergraduate-program/electrical-and-computer-engineering/">
 							Electrical and Computer Engineering
 						</a>
 						at Shanghai Jiao Tong University.
 					</p>
 					<p>
-						I have a passionate interest in machine learning, especially machine learning on graph-structured data. 
-						At the moment, I am intrigued by the studies of active learning, interpretability, and robustness on Graph Neural Network. 
-						I am also actively exploring how state-of-the-art machine learning breakthroughs can play a role in enabled interdisciplines.
+						I am boardly interested in Natural Language Processing (Grounded Language Processing, Human-Robot Communication) 
+						and Machine Learning (Graph Neural Networks, Semi-Supervised Learning, Knowledge Graphs).
 					</p>
 					
 					<div class="row">
@@ -133,7 +134,10 @@
 					<h2>News</h2>
 					<ul>
 						<li>
-							[Dec. 2020] I will be the Instructional Aide for EECS 492 Winter 2021, working with Professor Chai!
+							[Mar. 2021] I will join the family of the <a href="https://ai.engin.umich.edu/">Michigan AI Lab</a> as a Ph.D. student this fall. Go Blue!
+						</li>
+						<li>
+							[Dec. 2020] I will be the Instructional Aide for EECS 492 Winter 2021.
 						</li>
 						<li>
 							[Aug. 2020] I moved my blogs <a href="/archives/">here</a>. Let me know what you want to see!
@@ -161,7 +165,6 @@
 											<li>Computer Vision (A+)</li>
 											<li>Machine Learning (A+)</li>
 											<li>Artificial Intelligence (A)</li>
-											<li>Data Mining (in progress)</li>
 											<li>Information Retrieval (in progress)</li>
 											<li>Ethics for AI and Robotics (in progress)</li>
 										</ul></span>
