--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 					<p>
 						I am an incoming Ph.D. student working with <a href="https://web.eecs.umich.edu/~chaijy/">Joyce Chai</a>
-						in the <a href="https://sled-group.eecs.umich.edu/">Situated Language and Embodied Dialogue (SLED)</a> Group. <br>
+						in the <a href="https://sled-group.eecs.umich.edu/">Situated Language and Embodied Dialogue (SLED)</a> Group.
 						I will obtain my Dual Bachelor's Degree at the University of Michigan in
 						<a href="https://cse.engin.umich.edu/academics/undergraduate/computer-science-eng/">
 							Computer Science
