--- a/index.html
+++ b/index.html
@@ -87,13 +87,14 @@
 					</p>
 
 					<p>
-						I am an incoming Ph.D. student working with <a href="https://web.eecs.umich.edu/~chaijy/">Joyce Chai</a>
+						I am an incoming Ph.D. student at the University of Michigan
+						working with <a href="https://web.eecs.umich.edu/~chaijy/">Joyce Chai</a>
 						in the <a href="https://sled-group.eecs.umich.edu/">Situated Language and Embodied Dialogue (SLED)</a> Group.
-						I will obtain my Dual Bachelor's Degree at the University of Michigan in
+						I will obtain my Dual Bachelor's Degree in
 						<a href="https://cse.engin.umich.edu/academics/undergraduate/computer-science-eng/">
 							Computer Science
 						</a>,
-						and
+						at the University of Michigan and
 						<a href="http://umji.sjtu.edu.cn/academics/undergraduate-program/electrical-and-computer-engineering/">
 							Electrical and Computer Engineering
 						</a>
