--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 						at Shanghai Jiao Tong University.
 					</p>
 					<p>
-						I am boardly interested in Natural Language Processing (Grounded Language Processing, Human-Robot Communication) 
+						I am broadly interested in Natural Language Processing (Grounded Language Processing, Human-Robot Communication) 
 						and Machine Learning (Graph Neural Networks, Semi-Supervised Learning, Knowledge Graphs).
 					</p>
 					
